<resources>
    <string name="app_name">City Guide</string>

    <string name="logo_name">Find A Home</string>
    <string name="slogan_name">We will help you find your way!</string>

    <!--    Strings for on_boarding -->
    <string name="first_slide_title">Search Your Location</string>
    <string name="second_slide_title">Make A Call</string>
    <string name="third_slide_title">Add Missing Place</string>
    <string name="fourth_slide_title">Sit Back and Enjoy</string>
    <!--    Descriptions-->
    <string name="first_slide_desc">You can search any place nearby or within the specified city. We will display specific or all related shops to match your search</string>
    <string name="second_slide_desc">We will provide almost all the numbers of all departments and shops registered with us. You can perform bookings as well</string>
    <string name="third_slide_desc">If you have a shop or something and you want to be a part of our growing industry then add your place by following simple steps</string>
    <string name="fourth_slide_desc">We will handle everything for you. As you have the app in your pocket then you don\'t have to worry about anything</string>

    <!--    Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="lets_get_started">Lets Get Started</string>
    <string name="search_text">Search...</string>
    <!--    Strings for Dashboard-->
    <!--    Categories-->
    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="shops">Shops</string>
    <string name="banks">Banks</string>
    <string name="airports">Airports</string>
    <!--titles and descriptions-->
    <string name="featured_locations">All Featured locations</string>
    <string name="featured_location_description">All the locations that are featured and have top demand in town!</string>
    <string name="most_viewed_location">Most view</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="schools">Schools</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="all_categories">All Categories</string>
    <string name="add_missing_place">Add Missing Place</string>
    <!--    <string name="search_text">View All Results</string>-->

</resources>