<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/menu"
        />
    <item
        android:id="@+id/nav_search"
        android:title="@string/search"
        android:icon="@drawable/search_icon"
        />
    <item
        android:id="@+id/nav_cat"
        android:title="@string/all_categories"
        android:icon="@drawable/menu"
        />
    <item
        android:id="@+id/nav_add_place"
        android:title="@string/add_missing_place"
        android:icon="@drawable/add_missing_place_icon"
        />


</group>
    <item
        android:title="Profile">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_login"
                    android:title="@string/home"
                    android:icon="@drawable/menu"
                    />
                <item
                    android:id="@+id/nav_profile"
                    android:title="@string/search"
                    android:icon="@drawable/search_icon"
                    />
                <item
                    android:id="@+id/nav_logout"
                    android:title="@string/all_categories"
                    android:icon="@drawable/menu"
                    />



            </group>
        </menu>
    </item>
</menu>